@@ -303,12 +303,6 @@ public class DaemonConnector {
     }
 
     private Process startDaemonProcess(String daemonId) {
-        // Those options are needed in order to be able to set the environment correctly
-        DaemonParameters parameters = this.parameters.withJdkJavaOpts(
-                " --add-opens java.base/java.io=ALL-UNNAMED"
-                        + " --add-opens java.base/java.lang=ALL-UNNAMED"
-                        + " --add-opens java.base/java.util=ALL-UNNAMED"
-                        + " --add-opens java.base/sun.nio.fs=ALL-UNNAMED");
         final Path mvndHome = parameters.mvndHome();
         final Path workingDir = parameters.userDir();
         String command = "";
